--- a/app/src/main/res/layout/activity_registration2.xml
+++ b/app/src/main/res/layout/activity_registration2.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#6A1B9A"
     android:layout_height="match_parent"
+    android:background="#6A1B9A"
     tools:context=".RegistrationActivity">
 
     <LinearLayout
@@ -42,8 +42,8 @@
                 <TextView
                     android:id="@+id/textViewFirstShoppingApp"
                     android:layout_width="match_parent"
-                    android:layout_marginTop="10dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:text="@string/yourFirstApp"
                     android:textAlignment="center"
                     android:textColor="@color/white"
@@ -89,16 +89,15 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/textInputLayoutName"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="2">
+                    android:layout_height="wrap_content"
+                    android:hint="Name">
 
-                    <com.google.android.material.textfield.TextInputEditText
+                    <EditText
                         android:id="@+id/textInputEditTextName"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:backgroundTint="@color/white"
-                        android:hint="Name"
+                        android:layout_height="wrap_content"
                         android:inputType="text"
                         android:maxLines="1" />
 
@@ -111,17 +110,17 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/textInputLayoutEmail"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="2">
+                    android:layout_height="wrap_content">
 
-                    <com.google.android.material.textfield.TextInputEditText
+                    <EditText
                         android:id="@+id/textInputEditTextEmail"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:backgroundTint="@color/white"
                         android:hint="Email"
-                        android:inputType="text"
+                        android:inputType="textEmailAddress"
                         android:maxLines="1" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -133,17 +132,17 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/textInputLayoutPassword"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="2">
+                    android:layout_height="wrap_content">
 
-                    <com.google.android.material.textfield.TextInputEditText
+                    <EditText
                         android:id="@+id/textInputEditTextPassword"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:backgroundTint="@color/white"
                         android:hint="Password"
-                        android:inputType="text"
+                        android:inputType="textPassword"
                         android:maxLines="1" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -154,18 +153,18 @@
                     android:layout_weight="0.5" />
 
                 <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:id="@+id/textInputLayoutConfirmPassword"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="2">
+                    android:layout_height="wrap_content">
 
-                    <com.google.android.material.textfield.TextInputEditText
+                    <EditText
                         android:id="@+id/textInputEditTextConfirmPassword"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:backgroundTint="@color/white"
                         android:hint="Confirm Password"
-                        android:inputType="text"
+                        android:inputType="textPassword"
                         android:maxLines="1" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -178,13 +177,12 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/buttonRegister"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="50dp"
                     android:layout_marginStart="70dp"
                     android:layout_marginTop="10dp"
-                    android:backgroundTint="#4A148C"
                     android:layout_marginEnd="70dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_weight="2"
+                    android:backgroundTint="#4A148C"
                     android:text="Register"
                     app:cardCornerRadius="25dp">
 
@@ -193,10 +191,10 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="REGISTER"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
                         android:textAlignment="center"
-                        android:textSize="21sp" />
+                        android:textColor="@color/white"
+                        android:textSize="21sp"
+                        android:textStyle="bold" />
 
                 </androidx.cardview.widget.CardView>
 
@@ -204,11 +202,10 @@
                 <TextView
                     android:id="@+id/textViewAlready"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:textColor="#4A148C"
-                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
                     android:text="Already have an account??"
                     android:textAlignment="center"
+                    android:textColor="#4A148C"
                     android:textSize="16sp" />
 
             </LinearLayout>
