--- a/app/src/main/res/layout/activity_registration2.xml
+++ b/app/src/main/res/layout/activity_registration2.xml
@@ -79,8 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:padding="10dp"
-                android:weightSum="13.5">
+                android:padding="10dp">
 
                 <View
                     android:layout_width="match_parent"
@@ -183,7 +182,6 @@
                     android:layout_marginEnd="70dp"
                     android:layout_marginBottom="10dp"
                     android:backgroundTint="#4A148C"
-                    android:text="Register"
                     app:cardCornerRadius="25dp">
 
                     <TextView
