--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.AcmeGradeFinalAssessment" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+
+
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_800</item>
         <item name="colorPrimaryVariant">@color/purple_900</item>
@@ -12,6 +14,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="Theme.AcmeGradeFinalAssessment.NoActionBar">
