--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,17 +5,16 @@
     android:layout_height="match_parent"
     tools:context=".HomeFragment">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Frag2"
-            android:textSize="30sp"
-            android:textStyle="bold"/>
+            android:layout_margin="10dp"
+            tools:listitem="@layout/item_card_layout"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </FrameLayout>
