--- a/app/src/main/res/layout/item_card_layout.xml
+++ b/app/src/main/res/layout/item_card_layout.xml
@@ -69,6 +69,7 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="65dp"
                     android:layout_height="30dp"
+                    app:cardElevation="0dp"
                     android:layout_marginTop="6dp"
                     android:backgroundTint="#23BB75"
                     app:cardCornerRadius="20dp">
@@ -113,7 +114,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_alignParentTop="true"
-                    android:text="100"
+                    android:text= "100"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="35sp" />
@@ -123,7 +124,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_below="@id/textViewPrice"
-                    android:layout_centerHorizontal="true"
+                    android:layout_centerInParent="true"
                     android:src="@drawable/ic_baseline_shopping_cart_24" />
 
             </RelativeLayout>
