--- a/app/src/main/res/layout/activity_registration2.xml
+++ b/app/src/main/res/layout/activity_registration2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#6A1B9A"
-    tools:context=".RegistrationActivity">
+    tools:context=".presentation.activity.RegistrationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
