--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -5,17 +5,18 @@
     android:layout_height="match_parent"
     tools:context=".presentation.fragment.CartFragment">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewCart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Frag1"
-            android:textSize="30sp"
-            android:textStyle="bold"/>
+            android:layout_margin="10dp"
+            tools:listitem="@layout/item_card_layout" />
 
-    </LinearLayout>
+    </RelativeLayout>
+
 
 </FrameLayout>
