--- a/app/src/main/res/layout/activity_registration2.xml
+++ b/app/src/main/res/layout/activity_registration2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#6A1B9A"
+    android:background="@color/darker_pink"
     tools:context=".presentation.activity.RegistrationActivity">
 
     <LinearLayout
@@ -33,6 +33,7 @@
                     android:id="@+id/textViewWelcome"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-smallcaps"
                     android:text="@string/welcomeToEkart"
                     android:textAlignment="center"
                     android:textColor="@color/white"
@@ -44,6 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:fontFamily="sans-serif-smallcaps"
                     android:text="@string/yourFirstApp"
                     android:textAlignment="center"
                     android:textColor="@color/white"
@@ -58,7 +60,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="4"
                 android:padding="10dp"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:src="@drawable/online_shopping" />
 
         </LinearLayout>
 
@@ -152,8 +154,8 @@
                     android:layout_weight="0.5" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:id="@+id/textInputLayoutConfirmPassword"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -181,13 +183,14 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="70dp"
                     android:layout_marginBottom="10dp"
-                    android:backgroundTint="#4A148C"
+                    android:backgroundTint="@color/darker_pink"
                     app:cardCornerRadius="25dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:fontFamily="sans-serif-smallcaps"
                         android:text="REGISTER"
                         android:textAlignment="center"
                         android:textColor="@color/white"
@@ -201,9 +204,10 @@
                     android:id="@+id/textViewAlready"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-smallcaps"
                     android:text="Already have an account??"
                     android:textAlignment="center"
-                    android:textColor="#4A148C"
+                    android:textColor="@color/darker_pink"
                     android:textSize="16sp" />
 
             </LinearLayout>
