--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,9 +10,10 @@
     
     
 <!--    <My Colors-->
-    <color name="purple_800">#6A1B9A</color>
-    <color name="purple_900">#4A148C</color>
-    <color name="filter_light_background">#D1C4E9</color>
-    <color name="filter_dark_background">#4A148C</color>
+    <color name="dark_pink">#E91E63</color>
+    <color name="darker_pink">#AD1457</color>
+    <color name="filter_light_background">#F8BBD0</color>
+    <color name="filter_dark_background">#C2185B</color>
+    <color name="green">#23BB75</color>
     
 </resources>
