--- a/app/src/main/res/layout/activity_billing_summary.xml
+++ b/app/src/main/res/layout/activity_billing_summary.xml
@@ -39,21 +39,57 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         app:cardCornerRadius="30dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/billing_summary_cardView">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/bill_recycler_view"
+            android:layout_width="match_parent"
+            android:overScrollMode="never"
+            tools:listitem="@layout/bill_item_card_layout"
+            android:layout_height="match_parent"
+            android:layout_margin="15dp"/>
 
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="20dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.87"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bill_cardView">
+
+        <TextView
+            android:id="@+id/total_bill_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="TOTAL: 2000"
+            android:fontFamily="sans-serif-smallcaps"
+            android:layout_margin="10dp"
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/checkoutButton"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         app:cardCornerRadius="20dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.96"
+        app:layout_constraintVertical_bias="0.98"
         app:layout_constraintBottom_toBottomOf="parent"
         android:backgroundTint="#F8BBD0"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +108,5 @@
             android:textStyle="bold" />
 
     </com.google.android.material.card.MaterialCardView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
