--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="3"
+                android:fontFamily="sans-serif-smallcaps"
                 android:text="Already \nHave an Account?"
                 android:textAlignment="center"
                 android:textSize="27sp"
@@ -38,88 +39,89 @@
                 android:layout_height="match_parent"
                 android:layout_weight="4"
                 android:padding="10dp"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:src="@drawable/online_shopping"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:orientation="vertical"
-            android:layout_weight="7">
+            android:layout_weight="7"
+            android:orientation="vertical">
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/textInputLayoutLoginEmail"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="match_parent"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:layout_marginTop="80dp"
-                        android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayoutLoginEmail"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="80dp"
+                android:layout_marginEnd="20dp">
 
-                        <EditText
-                            android:id="@+id/textInputEditTextLoginEmail"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:backgroundTint="@color/white"
-                            android:hint="Email"
-                            android:inputType="textEmailAddress"
-                            android:maxLines="1" />
+                <EditText
+                    android:id="@+id/textInputEditTextLoginEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/white"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1" />
 
-                    </com.google.android.material.textfield.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:id="@+id/textInputLayoutLoginPassword"
-                        android:layout_width="match_parent"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayoutLoginPassword"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp">
 
-                        <EditText
-                            android:id="@+id/textInputEditTextLoginPassword"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:backgroundTint="@color/white"
-                            android:hint="Password"
-                            android:inputType="textPassword"
-                            android:maxLines="1" />
+                <EditText
+                    android:id="@+id/textInputEditTextLoginPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/white"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:maxLines="1" />
 
-                    </com.google.android.material.textfield.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/buttonLogin"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_marginStart="70dp"
-                        android:layout_marginTop="25dp"
-                        android:layout_marginEnd="70dp"
-                        android:layout_marginBottom="10dp"
-                        android:backgroundTint="#4A148C"
-                        app:cardCornerRadius="25dp">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/buttonLogin"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="70dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginEnd="70dp"
+                android:layout_marginBottom="10dp"
+                android:backgroundTint="@color/darker_pink"
+                app:cardCornerRadius="25dp">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="LOGIN"
-                            android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="21sp"
-                            android:textStyle="bold" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:text="LOGIN"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="21sp"
+                    android:textStyle="bold" />
 
-                    </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-                    <TextView
-                        android:id="@+id/textViewNewReg"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="New User? Register Now!"
-                        android:textAlignment="center"
-                        android:textColor="#4A148C"
-                        android:textSize="16sp" />
-
+            <TextView
+                android:id="@+id/textViewNewReg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-smallcaps"
+                android:text="New User? Register Now!"
+                android:textAlignment="center"
+                android:textColor="@color/darker_pink"
+                android:textSize="16sp" />
 
 
         </LinearLayout>
