--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -6,7 +6,7 @@
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.fragment.AccountFragment">
+    tools:context=".presentation.fragment.ProfileFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,6 +17,7 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             app:cardCornerRadius="30dp"
+            android:backgroundTint="@color/filter_light_background"
             android:layout_marginTop="10dp"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
@@ -27,29 +28,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/imageCardView"
-                    app:cardCornerRadius="20dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="15dp"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp">
 
                     <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:id="@+id/imageProfile"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:layout_marginTop="15dp"
                         android:layout_centerHorizontal="true"
                         android:scaleType="centerCrop"
                         android:src="@drawable/profile"/>
-
-                </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:id="@+id/textViewName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="ANEESH GUPTA"
-                    android:layout_below="@id/imageCardView"
+                    android:layout_below="@id/imageProfile"
                     android:textAlignment="center"
                     android:layout_marginTop="15dp"
                     android:textStyle="bold"
@@ -79,6 +73,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="ACCOUNT INFO"
+                    android:fontFamily="sans-serif-smallcaps"
                     android:textSize="20sp"
                     android:textAlignment="center"
                     android:textStyle="bold"/>
@@ -89,7 +84,7 @@
                 android:layout_below="@id/cardViewAccount"
                 android:id="@+id/cardViewName"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 app:cardCornerRadius="20dp"
@@ -98,6 +93,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="horizontal"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:weightSum="2"
                     android:layout_height="match_parent">
 
@@ -123,6 +120,7 @@
                             android:layout_gravity="center_vertical"
                             android:layout_weight="0.5"
                             android:text="NAME:"
+                            android:fontFamily="sans-serif-smallcaps"
                             android:textStyle="bold"
                             android:textSize="18sp" />
 
@@ -132,8 +130,9 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="1.5"
+                            android:fontFamily="sans-serif-smallcaps"
                             android:text="SAMPLE"
-                            android:textSize="15sp"
+                            android:textSize="20sp"
                             android:layout_marginStart="10dp"/>
 
                     </LinearLayout>
@@ -146,7 +145,7 @@
                 android:layout_below="@id/cardViewName"
                 android:id="@+id/cardViewEmail"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 app:cardCornerRadius="20dp"
@@ -156,6 +155,8 @@
                     android:layout_width="match_parent"
                     android:orientation="horizontal"
                     android:weightSum="2"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_height="match_parent">
 
                     <ImageView
@@ -178,6 +179,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:text="EMAIL:"
+                            android:fontFamily="sans-serif-smallcaps"
                             android:textStyle="bold"
                             android:textSize="18sp" />
 
@@ -186,9 +188,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:text="sample"
-                            android:layout_marginStart="5dp"
-                            android:textSize="15sp" />
+                            android:layout_weight="1.5"
+                            android:fontFamily="sans-serif-smallcaps"
+                            android:text="SAMPLE"
+                            android:textSize="20sp"
+                            android:layout_marginStart="10dp" />
 
                     </LinearLayout>
 
