--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_alignParentBottom="true"
-            android:backgroundTint="#4A148C">
+            android:backgroundTint="@color/darker_pink">
 
             <TextView
                 android:layout_width="wrap_content"
