--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,8 +4,8 @@
 
 
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_800</item>
-        <item name="colorPrimaryVariant">@color/purple_900</item>
+        <item name="colorPrimary">@color/dark_pink</item>
+        <item name="colorPrimaryVariant">@color/darker_pink</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
